# MadLib

./: .buildinfo  .gitignore  LICENSE  README.md  all_tests.txt  coverage.xml  featurization.py  genindex.html  index.html  labeler.py  ml_model.py  module.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  storage.py  tools.py  unit_tests.txt
MadLib/: __init__.py  tools.py
MadLib/_internal/: __init__.py  api_utils.py  featurization.py  labeler.py  ml_model.py  utils.py
MatchFlow/: __init__.py  tools.py
MatchFlow/_internal/: __init__.py  featurization.py  utils.py
_modules/: index.html
_modules/MadLib/: tools.html
_sources/: index.rst.txt  module.rst.txt
_sources/api/: madmatcher_tools.rst.txt
_sources/module_stubs/: MadLib._internal.featurization.create_features.rst.txt  MadLib._internal.tokenizer.tokenizer.Tokenizer.rst.txt  MadLib._internal.tokenizer.vectorizer.Vectorizer.rst.txt  madmatcher_tools._internal.feature.feature.Feature.rst.txt  madmatcher_tools._internal.featurization.featurize.rst.txt  madmatcher_tools._internal.labeler.Labeler.rst.txt  madmatcher_tools._internal.ml_model.MLModel.rst.txt
active_learning/: cont_entropy_active_learner.py  ent_active_learner.py
docs/: MadLib-Technical-Guide.md  MadMatcher Tools Documentation.md  MatchFlow.rst  conf.py  create_features_temp.md  index.rst  label_pairs.md  madlib-technical-guide.md  modules.rst  sim-functions-tokenizers.md  spark-note.md  workflow-examples.md
docs/installation-guides/: install-cloud-based-cluster.md  install-linux-single-machine.md  install-macOS-single-machine.md  install-single-machine-macOS.md  (+1 more)
examples/: madlib_examples.ipynb  madlib_pandas.py  madlib_pandas_labeling_only.py  madlib_spark_cluster.py  madlib_spark_labeling_only.py  madlib_spark_local.py  madmatcher_examples.ipynb
feature/: feature.py  token_feature.py  vector_feature.py
madmatcher_tools/: __init__.py  tools.py
module_stubs/: MadLib._internal.feature.feature.Feature.html  MadLib._internal.featurization.featurize.html  MadLib._internal.featurization.score.html  MadLib._internal.labeler.CustomLabeler.html  MadLib._internal.labeler.Labeler.html  MadLib._internal.ml_model.MLModel.html  MadLib._internal.tokenizer.tokenizer.Tokenizer.html  MadLib._internal.tokenizer.vectorizer.Vectorizer.html  MadLib.tools.html  MatchFlow.html  madmatcher_tools._internal.feature.feature.Feature.html  madmatcher_tools._internal.featurization.create_features.html  madmatcher_tools._internal.featurization.featurize.html  madmatcher_tools._internal.featurization.score.html  madmatcher_tools._internal.labeler.CustomLabeler.html  madmatcher_tools._internal.labeler.Labeler.html  madmatcher_tools._internal.ml_model.MLModel.html  madmatcher_tools._internal.tokenizer.tokenizer.Tokenizer.html  madmatcher_tools._internal.tokenizer.vectorizer.Vectorizer.html  madmatcher_tools.tools.html
tests/: README.md  SUMMARY.md  __init__.py  conftest.py  coverage.txt  pytest.ini  requirements-dev.txt  test_algorithms.py  test_featurization.py  test_labeler.py  test_ml_model.py  test_runner.py  test_storage.py  test_tools.py  test_utils.py
tokenizer/: tokenizer.py  vectorizer.py
(+214 files in other folders)
