[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "madmatcher-tools"
version = "0.1.0"
description = "Tools for entity matching and record linkage"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Dev Ahluwalia" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "pyspark>=3.2.0",
    "joblib>=1.1.0",
    "threadpoolctl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-spark>=0.6.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",
    "pytest-env>=1.0.0",
    "pytest-randomly>=3.12.0",
    "pytest-sugar>=0.9.7",
    "pytest-clarity>=1.0.1",
    "pytest-html>=3.2.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["madmatcher_tools"]


[tool.hatch.metadata]
allow-direct-references = true 