[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MadLib"
version = "0.1.0"
description = "Tools for entity matching and record linkage"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    { name = "Dev Ahluwalia" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "flask>=2.0.0",
    "joblib==1.2.0",
    "mmh3==3.0.0",
    "numba==0.60.0",
    "numpy==1.26.0",
    "numpydoc==1.5.0",
    "pandas==1.5.2",
    "pyarrow==14.0.0",
    "py_stringmatching==0.4.6",
    "pyspark==3.5.3",
    "requests>=2.25.0",
    "scikit_learn==1.3.1",
    "scipy==1.15.2",
    "streamlit>=1.0.0",
    "tabulate>=0.8.9",
    "threadpoolctl==3.1.0",
    "tqdm==4.64.1",
    "xgboost==1.7.3",
    "xxhash>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1,<8.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-spark>=0.6.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",
    "pytest-env>=1.0.0",
    "pytest-randomly>=3.12.0",
    "pytest-sugar>=0.9.7",
    "pytest-clarity>=1.0.1",
    "pytest-html>=3.2.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "pytest-benchmark<5.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["MadLib"]


[tool.hatch.metadata]
allow-direct-references = true 